Fix: wrong colors in multiple ships in same squad; Add ship tag number

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -22,3 +22,8 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$shields   : #82D1E1;
+$hulls      : #F0E531;
+$charges   : #FDBF10;
+$forces     : #C4A0CA;
